--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint": "ng lint"
   },
   "devDependencies": {
+    "@types/pouchdb": "6.4.0",
     "@angular-builders/custom-webpack": "9.1.0",
     "@angular-devkit/build-angular": "0.901.1",
     "@angular-eslint/builder": "0.0.1-alpha.18",
@@ -82,5 +83,11 @@
   },
   "engines": {
     "node": ">=10.13.0"
+  },
+  "dependencies": {
+    "@angular/cdk": "9.2.1",
+    "@angular/flex-layout": "9.0.0-beta.29",
+    "pouchdb": "7.2.1",
+    "pouchdb-find": "7.2.1"
   }
 }
