--- a/package.json
+++ b/package.json
@@ -85,8 +85,11 @@
     "node": ">=10.13.0"
   },
   "dependencies": {
+    "@angular/animations": "^9.0.0 || ^10.0.0-0",
     "@angular/cdk": "9.2.1",
     "@angular/flex-layout": "9.0.0-beta.29",
+    "@angular/forms": "^9.0.0 || ^10.0.0-0",
+    "@angular/material": "9.2.1",
     "pouchdb": "7.2.1",
     "pouchdb-find": "7.2.1"
   }
