--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "@angular/flex-layout": "9.0.0-beta.29",
     "@angular/forms": "^9.0.0 || ^10.0.0-0",
     "@angular/material": "9.2.1",
+    "ang-jsoneditor": "1.9.4",
+    "jsoneditor": "8.6.8",
     "pouchdb": "7.2.1",
     "pouchdb-find": "7.2.1"
   }
