--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "lint": "ng lint"
   },
   "devDependencies": {
-    "@types/pouchdb": "6.4.0",
     "@angular-builders/custom-webpack": "9.1.0",
     "@angular-devkit/build-angular": "0.901.1",
     "@angular-eslint/builder": "0.0.1-alpha.18",
@@ -51,6 +50,7 @@
     "@types/jasminewd2": "2.0.8",
     "@types/mocha": "7.0.2",
     "@types/node": "12.11.1",
+    "@types/pouchdb": "6.4.0",
     "@typescript-eslint/eslint-plugin": "2.27.0",
     "@typescript-eslint/parser": "2.27.0",
     "chai": "4.2.0",
@@ -74,8 +74,8 @@
     "npm-run-all": "4.1.5",
     "rxjs": "6.5.5",
     "spectron": "10.0.1",
-    "tslib": "1.11.1",
     "ts-node": "8.8.2",
+    "tslib": "1.11.1",
     "typescript": "3.8.3",
     "wait-on": "4.0.2",
     "webdriver-manager": "12.1.7",
@@ -93,6 +93,7 @@
     "ang-jsoneditor": "1.9.4",
     "jsoneditor": "8.6.8",
     "pouchdb": "7.2.1",
-    "pouchdb-find": "7.2.1"
+    "pouchdb-find": "7.2.1",
+    "pouchdb-replication-stream": "1.2.9"
   }
 }
